# Hamming-file-archiver

./: CMakeLists.txt  README.md
utils/: CMakeLists.txt  archiver.cpp  archiver.h
utils/hamming/: encoder.cpp  encoder.h  hamming.cpp  hamming.h
utils/parser/: argparser.cpp  argparser.h
